--- a/expense-tracker/src/app/app.component.html
+++ b/expense-tracker/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Expense Tracker</h1>
 <app-add-expense></app-add-expense>
+<app-filter-expenses></app-filter-expenses>
 <app-expense-list></app-expense-list>
