--- a/expense-tracker/src/app/components/filter-expenses/filter-expenses.component.html
+++ b/expense-tracker/src/app/components/filter-expenses/filter-expenses.component.html
@@ -1,4 +1,6 @@
 <select (change)="updateFilter($event)" class="border p-2">
   <option value="All">All</option>
-  <option *ngFor="let cat of categories" [value]="cat">{{ cat }}</option>
+  @for (cat of categories; track $index) {
+  <option [value]="cat">{{ cat }}</option>
+  }
 </select>
